[B]Versino 3.0.0 - 2012-12-26[/B]
- Complete rewrite with new features made possible by website changes

[B]Version 2.0.1 - 2012-11-27[/B]
- Updated to match site changes (thanks to Kenneth Jacobsen)

[B]Version 2.0.0[/B]
- First version for Eden
- No new features since v1.1.0

[B]Version 1.1.0[/B]
- Removed dependency on danishaddons and feedparser module
- Let XBMC handle the feeds using rss:// protocol
- New icon and fanart

[B]Version 1.0.3[/B]
- Updated to danishaddons module 1.1.0
- Use script.module.feedparser
- Handle except due to feedparser 'bozo' content

[B]Version 1.0.2[/B]
- Fixed clip duration
- Fixed various errors parsing clip information

[B]Version 1.0.1[/B]
- Changed plugin ID to plugin.video.dr.dk.podcast
- Now uses libary module for Danish addons

[B]Version 1.0.0[/B]
- Initial version