@@ -2,11 +2,6 @@
 <project version="4">
   <component name="ChangeListManager">
     <list default="true" id="e916ebb2-687a-4747-b376-528f1098adca" name="Default" comment="">
-      <change type="NEW" beforePath="" afterPath="$PROJECT_DIR$/podcastapi.py" />
-      <change type="NEW" beforePath="" afterPath="$PROJECT_DIR$/resources/language/Danish/strings.po" />
-      <change type="NEW" beforePath="" afterPath="$PROJECT_DIR$/resources/language/English/strings.po" />
-      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/.idea/modules.xml" afterPath="$PROJECT_DIR$/.idea/modules.xml" />
-      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/.idea/plugin.video.dr.dk.podcast.iml" afterPath="$PROJECT_DIR$/.idea/plugin.video.dr.dk.podcast.iml" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/.idea/workspace.xml" afterPath="$PROJECT_DIR$/.idea/workspace.xml" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/addon.py" afterPath="$PROJECT_DIR$/addon.py" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/addon.xml" afterPath="$PROJECT_DIR$/addon.xml" />
@@ -33,19 +28,28 @@
   </component>
   <component name="FileEditorManager">
     <leaf>
-      <file leaf-file-name="changelog.txt" pinned="false" current="true" current-in-tab="true">
+      <file leaf-file-name="changelog.txt" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/changelog.txt">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="1" column="69" selection-start="36" selection-end="103" vertical-scroll-proportion="0.02640845">
+            <state line="1" column="2" selection-start="36" selection-end="89" vertical-scroll-proportion="0.0">
               <folding />
             </state>
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="addon.xml" pinned="false" current="false" current-in-tab="false">
+      <file leaf-file-name="addon.py" pinned="false" current="false" current-in-tab="false">
+        <entry file="file://$PROJECT_DIR$/addon.py">
+          <provider selected="true" editor-type-id="text-editor">
+            <state line="134" column="0" selection-start="5358" selection-end="5358" vertical-scroll-proportion="0.0">
+              <folding />
+            </state>
+          </provider>
+        </entry>
+      </file>
+      <file leaf-file-name="addon.xml" pinned="false" current="true" current-in-tab="true">
         <entry file="file://$PROJECT_DIR$/addon.xml">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="9" column="16" selection-start="488" selection-end="488" vertical-scroll-proportion="0.0">
+            <state line="1" column="53" selection-start="92" selection-end="92" vertical-scroll-proportion="0.027027028">
               <folding />
             </state>
           </provider>
@@ -66,15 +70,14 @@
       <list>
         <option value="$PROJECT_DIR$/resources/language/English/strings.po" />
         <option value="$PROJECT_DIR$/podcastapi.py" />
-        <option value="$PROJECT_DIR$/addon.py" />
         <option value="$PROJECT_DIR$/resources/language/Danish/strings.po" />
-        <option value="$PROJECT_DIR$/addon.xml" />
+        <option value="$PROJECT_DIR$/addon.py" />
         <option value="$PROJECT_DIR$/changelog.txt" />
+        <option value="$PROJECT_DIR$/addon.xml" />
       </list>
     </option>
   </component>
   <component name="ProjectFrameBounds">
-    <option name="x" value="-1" />
     <option name="y" value="25" />
     <option name="width" value="1368" />
     <option name="height" value="744" />
@@ -105,7 +108,6 @@
       <sortByType />
     </navigator>
     <panes>
-      <pane id="Scope" />
       <pane id="ProjectPane">
         <subPane>
           <PATH>
@@ -170,6 +172,7 @@
           </PATH>
         </subPane>
       </pane>
+      <pane id="Scope" />
       <pane id="Favorites" />
     </panes>
   </component>
@@ -304,18 +307,22 @@
       <created>1354032743645</created>
       <updated>1354032743645</updated>
     </task>
-    <option name="localTasksCounter" value="2" />
+    <task id="LOCAL-00002" summary="Complete rewrite with new features made possible by website changes">
+      <created>1356524454832</created>
+      <updated>1356524454832</updated>
+    </task>
+    <option name="localTasksCounter" value="3" />
     <servers />
   </component>
   <component name="ToolWindowManager">
-    <frame x="-1" y="25" width="1368" height="744" extended-state="6" />
+    <frame x="0" y="25" width="1368" height="744" extended-state="6" />
     <editor active="false" />
     <layout>
       <window_info id="Changes" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="7" side_tool="false" content_ui="tabs" />
       <window_info id="TODO" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="6" side_tool="false" content_ui="tabs" />
       <window_info id="Database" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="3" side_tool="false" content_ui="tabs" />
       <window_info id="Structure" active="false" anchor="left" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.25" sideWeight="0.5" order="1" side_tool="true" content_ui="tabs" />
-      <window_info id="Project" active="true" anchor="left" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="true" weight="0.2621212" sideWeight="0.67058825" order="0" side_tool="false" content_ui="combo" />
+      <window_info id="Project" active="true" anchor="left" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="true" weight="0.27121213" sideWeight="0.67058825" order="0" side_tool="false" content_ui="combo" />
       <window_info id="Debug" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.4" sideWeight="0.5" order="3" side_tool="false" content_ui="tabs" />
       <window_info id="Favorites" active="false" anchor="left" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="2" side_tool="true" content_ui="tabs" />
       <window_info id="Event Log" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="7" side_tool="true" content_ui="tabs" />
@@ -368,7 +375,7 @@
     <option name="SHOW_VCS_ERROR_NOTIFICATIONS" value="true" />
     <option name="FORCE_NON_EMPTY_COMMENT" value="false" />
     <option name="CLEAR_INITIAL_COMMIT_MESSAGE" value="false" />
-    <option name="LAST_COMMIT_MESSAGE" value="Updated to match site changes (thanks to Kenneth Jacobsen)" />
+    <option name="LAST_COMMIT_MESSAGE" value="Complete rewrite with new features made possible by website changes" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="true" />
     <option name="OPTIMIZE_IMPORTS_BEFORE_PROJECT_COMMIT" value="false" />
     <option name="CHECK_FILES_UP_TO_DATE_BEFORE_COMMIT" value="false" />
@@ -383,6 +390,7 @@
     <option name="FILE_HISTORY_SPLITTER_PROPORTION" value="0.6" />
     <MESSAGE value="refactored and simplified" />
     <MESSAGE value="Updated to match site changes (thanks to Kenneth Jacobsen)" />
+    <MESSAGE value="Complete rewrite with new features made possible by website changes" />
   </component>
   <component name="XDebuggerManager">
     <breakpoint-manager />
@@ -390,9 +398,7 @@
   <component name="editorHistoryManager">
     <entry file="file://$PROJECT_DIR$/resources/language/English/strings.po">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="36" column="18" selection-start="888" selection-end="888" vertical-scroll-proportion="0.0">
-          <folding />
-        </state>
+        <state line="36" column="18" selection-start="888" selection-end="888" vertical-scroll-proportion="0.0" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/changelog.txt">
@@ -411,18 +417,12 @@
     </entry>
     <entry file="file://$PROJECT_DIR$/podcastapi.py">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="71" column="18" selection-start="2288" selection-end="2288" vertical-scroll-proportion="0.0">
-          <folding />
-        </state>
+        <state line="71" column="18" selection-start="2288" selection-end="2288" vertical-scroll-proportion="0.0" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/addon.py">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0">
-          <folding>
-            <element signature="e#805#814#0" expanded="true" />
-          </folding>
-        </state>
+        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/changelog.txt">
@@ -441,48 +441,27 @@
     </entry>
     <entry file="file://$PROJECT_DIR$/addon.py">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="43" column="0" selection-start="1276" selection-end="1276" vertical-scroll-proportion="0.0">
-          <folding>
-            <element signature="e#805#814#0" expanded="true" />
-          </folding>
-        </state>
+        <state line="43" column="0" selection-start="1276" selection-end="1276" vertical-scroll-proportion="0.0" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/resources/language/English/strings.po">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="44" column="7" selection-start="1011" selection-end="1011" vertical-scroll-proportion="0.0">
-          <folding />
-        </state>
+        <state line="44" column="7" selection-start="1011" selection-end="1011" vertical-scroll-proportion="0.0" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/../xbmcstubs/xbmc.py">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="867" column="0" selection-start="21772" selection-end="21772" vertical-scroll-proportion="0.0">
-          <folding />
-        </state>
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/addon.py">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="68" column="24" selection-start="2694" selection-end="2694" vertical-scroll-proportion="0.0">
-          <folding>
-            <element signature="e#805#814#0" expanded="true" />
-          </folding>
-        </state>
+        <state line="867" column="0" selection-start="21772" selection-end="21772" vertical-scroll-proportion="0.0" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/resources/language/Danish/strings.po">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="1" column="28" selection-start="62" selection-end="62" vertical-scroll-proportion="0.0">
-          <folding />
-        </state>
+        <state line="1" column="28" selection-start="62" selection-end="62" vertical-scroll-proportion="0.0" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/podcastapi.py">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="19" column="0" selection-start="805" selection-end="805" vertical-scroll-proportion="-1.3169014">
-          <folding />
-        </state>
+        <state line="19" column="0" selection-start="805" selection-end="805" vertical-scroll-proportion="-1.3169014" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/icon.png">
@@ -490,16 +469,23 @@
         <state />
       </provider>
     </entry>
-    <entry file="file://$PROJECT_DIR$/addon.xml">
+    <entry file="file://$PROJECT_DIR$/addon.py">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="9" column="16" selection-start="488" selection-end="488" vertical-scroll-proportion="0.0">
+        <state line="134" column="0" selection-start="5358" selection-end="5358" vertical-scroll-proportion="0.0">
           <folding />
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/changelog.txt">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="1" column="69" selection-start="36" selection-end="103" vertical-scroll-proportion="0.02640845">
+        <state line="1" column="2" selection-start="36" selection-end="89" vertical-scroll-proportion="0.0">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/addon.xml">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="1" column="53" selection-start="92" selection-end="92" vertical-scroll-proportion="0.027027028">
           <folding />
         </state>
       </provider>
