@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.dr.dk.podcast" version="3.0.0" name="DR.dk Podcasts" provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.dr.dk.podcast" version="3.0.1" name="DR.dk Podcasts" provider-name="twinther [tommy@winther.nu]">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
