@@ -1,4 +1,7 @@
-[B]Versino 3.0.0 - 2012-12-26[/B]
+[B]Version 3.0.1 - 2012-12-28[/B]
+- Fixed error related to starting addon from favourites
+
+[B]Version 3.0.0 - 2012-12-26[/B]
 - Complete rewrite with new features made possible by website changes
 
 [B]Version 2.0.1 - 2012-11-27[/B]
